Requires:
~~~~~~~~~
- Zope 2.9b1
- CPSCore >= 2005-12-20
New features:
~~~~~~~~~~~~~
- cpsinstall creates a CMF caching_policy_manager instance with a
  default policy that caches objects of type 'Filesystem Image' for one
  hour (HTTP headers)
- i18n of the password reminder feature
- password reminder now accepts email as input
Bug fixes:
~~~~~~~~~~
- Fixed the cache of the portlet_contact_info custom portlet so that the
  portlet provide a correct accessibility link for each virtual hosts.
- Fixed security hole in forgotten password reset processing.
- the document portlet and the subfolders in the main content area were
  displayed along with the portal forms.
- #1073: made getImgTag more robust.
- Fixed #628: Need an action to remove a translation.
- Fixed #1205: Faulty logged_in redirect with a HTTPS secured site.
- #1161: Added a migration script to the "boxless" setup.
- Fixed #770: Remove in cpsdefault.css.dtml all the CSS directives
  pertaining to CPSBoxes and put them in a cpsboxes.css.dtml file.
- Fixed #1152: Reset password email should be i18ned.
- Made the history of documents display the full name of the users instead of
  the usernames.
- Updated the default profile so that portlets have their default guard set as
  previously.
- Fixed the login form so that it renders well on MSIE too.
- Test for #1239 Folderish documents workflows are not enough
  recursivefolderish document is republished
- Usability: Merged the portal configuration form and the language configuration
  form.
- #1258: the portlet's cache cleanup date is a float
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Less restrictive permission check to allow
  a user to use the form in folder_contents
  was: 'Delete Folder', now is: 'Modify Portal Content'
  because the form button now handles correctly
  each perm.
- Removed obsolete widget types registration.
- tune #1133: getSortedContentTypes.py is too slow
- effective_date gets automatically updated at publish time (in