@@ -10,11 +10,19 @@ from `IOrderedContainer` interface.
 
 Let's create a fake folder for our tests and plug the view::
 
+    >>> class FakeFactory:
+    ...     content_meta_type = 'Link'
+    ...
     >>> class FakeFolder:
     ...     items = []
     ...
     ...     def getObjectPosition(self, id):
-    ...         return self.items.index(id)
+    ...         for item in self.items:
+    ...             if isinstance(item, str) and item == id:
+    ...                 return self.items.index(item)
+    ...             elif hasattr(item, 'id') and item.id == id:
+    ...                 return self.items.index(item)
+    ...         return -1
     ...
     ...     def moveObjectToPosition(self, id, newpos):
     ...         oldpos = self.getObjectPosition(id)
@@ -23,19 +31,36 @@ Let's create a fake folder for our tests and plug the view::
     ...         self.items[newpos] = temp
     ...
     ...     def objectIds(self):
-    ...         return self.items
+    ...         ids = []
+    ...         for element in self.items:
+    ...             if isinstance(element, str):
+    ...                 ids.append(element)
+    ...             else:
+    ...                 ids.append(element.id)
+    ...         return ids
     ...
     ...     def restrictedTraverse(self, url):
     ...         return FakeFolder()
     ...
     ...     def manage_cutObjects(self, ids):
     ...         for id in ids:
-    ...             if id in self.items:
-    ...                 del self.items[self.items.index(id)]
+    ...             position = self.getObjectPosition(id)
+    ...             if position != -1:
+    ...                 del self.items[position]
     ...
     ...     def manage_pasteObjects(self, cb):
     ...         pass
     ...
+    ...     def __getitem__(self, id):
+    ...         for element in self.items:
+    ...             if isinstance(element, str) and id == element:
+    ...                 return element
+    ...             elif hasattr(element, 'id') and id == element.id:
+    ...                 return element
+    ...         raise AttributeError(id)
+    ...
+    ...     def allowedContentTypes(self):
+    ...         return (FakeFactory(),)
     >>> MyFolder = FakeFolder()
 
 Now let's try to move elements::
@@ -50,8 +75,25 @@ Now let's try to move elements::
 
 AjaxFolderView also know how to move an element in another container::
 
+    >>> class FakeElement:
+    ...     def __init__(self, id):
+    ...         self.id = id
+    ...         self.portal_type = 'Link'
+    ...     def getContent(self):
+    ...         return self
+    ...     def absolute_url(self):
+    ...         return 'url_%s_url' % self.id
+    ...
     >>> MyView = AjaxFolderView(MyFolder, None)
+    >>> MyFolder.items = [FakeElement('a'), FakeElement('b'), FakeElement('c')]
     >>> MyView.moveElement('draggablea', 'better/here')
-    'c:b'
-    >>> MyFolder.items
-    ['c', 'b']
+    'b:c'
+    >>> [item.id for item in MyFolder.items]
+    ['b', 'c']
+
+We aslo provide various guards to avoid silly drags::
+
+    >>> MyView = AjaxFolderView(MyFolder, None)
+    >>> MyFolder.items = [FakeElement('a'), FakeElement('b')]
+    >>> MyView._checkElementMove('a', 'anywhere')
+    True
