@@ -68,6 +68,7 @@
                tal:define="ajax_working_msg python:cpsmcat('ajax_working')">
         <script langage="javascript" tal:content="structure string:
                 var editor = new CPSContainerEditor('draggable', 'droppable',
+                                                    'droppable-in',
                                                     '${ajax_working_msg}',
                                                     'folder_content', 'ajax_psm');">
         </script>
