@@ -980,8 +980,12 @@ span.advancedSearchColumn {
 }
 
 div.drophover {
-  //background: #ffe68f;
   border-bottom: 3px solid black;
+}
+
+div.drophover-in {
+  background: #ffe68f;
+  border: 1px solid black;
 }
 
 #ajax_psm {
