@@ -9,6 +9,11 @@ New features:
   hour (HTTP headers)
 - i18n of the password reminder feature
 - password reminder now accepts email as input
+- ajax drag'n'drop features:
+  - ability to move elements within the same folder in order to change
+    the order
+  - ability to drop an element to another place through a tree portlet
+    that is 'droppable-enabled' with a simple html id.
 Bug fixes:
 ~~~~~~~~~~
 - Fixed the cache of the portlet_contact_info custom portlet so that the
